--- a/insurance_calculator/index.html
+++ b/insurance_calculator/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="style.css">
   <title>Insurance Calculation</title>
 </head>
+<!-- simple insurance calculation -->
 
 <body>
   <form>
